[package]
name = "tokio-v-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.10.0"
async-std = { version = "1.31.1", features = ["attributes"] }
bastion = "0.4.5"
crossbeam = "0.8.4"
flume = "0.11.1"
futures = "0.3.31"
nalgebra = "0.33.2"
num_cpus = "1.16.0"
rand = "0.9.1"
rayon = "1.10.0"
smol = "2.0.2"
tokio = { version = "1.44.2", features = ["full"] }
